Fix weird footer vertical alignment bug in FF mobile

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -264,6 +264,8 @@ $biggerFontSize: 1.2rem;
     .app-grid-body {
       margin-top: $headerHeight;
       margin-bottom: $footerHeight;
+      overflow-x: hidden;
+      min-width: 0;
     }
 
     .app-grid-footer {
